[tool.poetry]
name = "python-samp"
version = "0.1.0"
description = "Python library for interfacing with San Andreas Multiplayer using memory"
authors = ["Vladimir <60815271+rmdlv@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Pymem = "^1.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
